# artix

./: .env.example  .gitignore  Cargo.toml
src/: database.rs  main.rs  sharex.rs  util.rs
src/tools/: mod.rs  sharex.rs
