[package]
name = "artix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web-lab = "0.19.1"
sqlite = "0.30.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rand = "0.5.0"